# docassemble-SNAP

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/SNAP/: __init__.py
docassemble/SNAP/data/questions/: SnapCalculator-calculation.yml  SnapCalculator-logic.yml  SnapCalculator-parameters.yml  SnapCalculator-questions.yml
docassemble/SNAP/data/static/: snap.css
docassemble/SNAP/data/templates/: snap-all.docx  snap-details.docx  snap-dtaInputs.docx  snap-summary.docx
