[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.SNAP"
version = "2026.0.0"
description = "SNAP Calculator"
readme = "README.md"
authors = [
    { name = "Team effort", email = "rhahn@mlri.org" },
]
dependencies = [
    "docassemble.PovertyScale",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
